--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
                 <h1 class="banner">To-Do-List</h1>
                 <div class="sort"><i class="fas fa-sort-amount-down"></i></div>
                 <div class="creatToDoList">
-                    <div class="readyToDoList" draggable="true">
+                    <div class="readyToDoList">
                         <div class="pointscheck"><img src="img/points.svg" alt="points"></div>
                         <input class="toDo"></input>
                         <div class="deletecheck"><i class="far fa-times-circle"></i></div>
@@ -34,5 +34,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
